[tool.poetry]
name = "laptime_sim"
version = "1.0.0"
description = ""
authors = ["JanJaapvandeVelde <janjaap.vandevelde@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 128

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
geopandas = "^1.0.1"
streamlit-folium = "^0.21.0"
folium = "^0.17.0"
matplotlib = "^3.9.1"
mapclassify = "^2.7.0"
pyogrio = "^0.9.0"
altair = "^5.3.0"
xyzservices = "^2024.6.0"
shapely = "^2.0.4"
plotly = "^5.22.0"
tqdm = "^4.66.4"

[tool.poetry.group.test.dependencies]
pytest = "*"
icecream = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

