[project]
name = "laptime_sim"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "JanJaapvandeVelde", email = "janjaap.vandevelde@gmail.com" },
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "streamlit>=1.36.0,<2.0.0",
    "streamlit-folium<1.0.0,>=0.21.0",
    "geopandas<2.0.0,>=1.0.1",
    "matplotlib<4.0.0,>=3.9.1",
    "mapclassify<3.0.0,>=2.7.0",
    "xyzservices<2025.0.0,>=2024.6.0",
    "plotly<6.0.0,>=5.22.0",
    "tqdm>=4.66.4,<5.0.0",
    "numba>=0.60.0",
]

[tool.uv]
package = false
no-build = true

[dependency-groups]
dev = ["pytest", "icecream"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
