[project]
name = "laptime_sim"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "JanJaapvandeVelde", email = "janjaap.vandevelde@gmail.com" },
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "streamlit-folium>=0.24.0",
    "streamlit>=1.44.1",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "pydantic>=2.11.1",
    "numba>=0.61.0",
    "plotly>=6.0.1",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "mapclassify>=2.8.1",
]

[tool.uv]
package = false
# no-build = true

[dependency-groups]
dev = ["pytest", "icecream"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
